Improved benchmarking and fix thread starvation